--- a/ch-rom-ey-eggs-ten-shon/app/views/popup.html
+++ b/ch-rom-ey-eggs-ten-shon/app/views/popup.html
@@ -11,8 +11,7 @@
         <!-- endbuild -->
     </head>
     <body>
-        <h1>'Allo, 'Allo!</h1>
-
+        Add website
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <!-- endbower -->
@@ -20,6 +19,17 @@
 
         <!-- build:js scripts/popup.js -->
         <script src="scripts/popup.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <!-- endbuild -->
+
+        <div ng-app="app" ng-controller="popup">
+          1) name: <input id="name" ng-model="name" />
+          <br/>
+          <br/>
+          2) <button ng-click="add()">Add</button>
+          <br/>
+          <br/>
+          3) click element to block
+        </div>
     </body>
 </html>
